--- a/web/src/app/uploader/customer-bluk/customer-bluk.component.html
+++ b/web/src/app/uploader/customer-bluk/customer-bluk.component.html
@@ -97,7 +97,7 @@
                             </div>
                             <!--  list end -->
                         </mat-tab>
-
+                        <!-- Spectacle -->
                         <mat-tab label="Spectacle">
                             <div class="body mt-4">
                                 <div class="row m-0">
@@ -187,8 +187,97 @@
                             </div>
                             <!--  list end -->
                         </mat-tab>
+                        <!-- Spectacle -->
+                        <!-- Contact -->
                         <mat-tab label="Contact">
-                        </mat-tab>
+                                <div class="body mt-4">
+                                    <div class="row m-0">
+                                    <form #studentDataForm2="ngForm" (submit)="submitCon(studentDataForm2)">
+                                        <div class="form-group">
+                                            <!-- <label for="file">Data File</label> -->
+                                            <input type="file" ngModel #ContactUpload hidden (change)="selectFileCon($event)"
+                                                class="form-control" name="file" id="file" aria-describedby="fileHelpId"
+                                                placeholder="Upload Purchase File" required />
+                                            <div class="d-flex justify-content-between">
+                                                <button id="uploadButton" (click)="ContactUpload.click()" type="button"
+                                                    class="btn btn-sm w-50 btn-block btn-info">
+                                                    Upload File
+                                                </button>
+                                                <div>
+                                                    <button type="submit" class="me-4" mat-raised-button color="primary"
+                                                        [disabled]="!studentDataForm2.valid">Submit</button>
+                                                    <!-- <button type="reset" class="btn btn-danger mx-2" (click)="studentDataForm.reset()" >Reset</button> -->
+                                                    <a type="button" mat-raised-button color="primary"
+                                                        title="download Sample File" (click)="generateExcelCon()">Download
+                                                        Sample File</a>
+                                                </div>
+                                            </div>
+                                        </div>
+                                    </form>
+                                </div>
+                                </div>
+                                <div class="row mt-md-5 mt-3 m-0">
+                                    <div class="col-md-5 col-12 ">
+                                        <select class=" form-control"
+                                            style="width: auto; border-radius: 22px; font-size: 10px !important; border: 2px solid #c3c3c3; box-shadow: inset 2px 2px 10px #adaaaad4;"
+                                            [(ngModel)]="itemsPerPageCon" (change)="getListCon();">
+                                            <option [ngValue]="10">Show 10 Row</option>
+                                            <option [ngValue]="25">Show 25 Row</option>
+                                            <option [ngValue]="50">Show 50 Row</option>
+                                            <option [ngValue]="100">Show 100 Row</option>
+                                            <option [ngValue]="250">Show 250Row</option>
+                                            <option [ngValue]="500">Show 500 Row</option>
+                                        </select>
+                                    </div>
+                                    <div class="col-md-3 col-12 mt-md-0 mt-3" style="margin-top:0px;">
+                                        <ngb-pagination style="margin: 0px 0 !important;" [ellipses]="false"
+                                            ngbPaginationEllipsis [collectionSize]="collectionSizeCon" #numPages
+                                            [pageSize]="itemsPerPageCon" [(page)]="currentPageCon" (pageChange)="getListCon()"
+                                            [maxSize]="5" [rotate]="true" [ellipses]="false" [boundaryLinks]="true">
+                                        </ngb-pagination>
+                                    </div>
+                                </div>
+                                <!--  list start -->
+                                <div class="body mt-2 ">
+                                    <div class="row m-0">
+                                        <div class="col-sm-12" style="overflow: auto; height: 400px;">
+                                            <table class="table table-striped table-hover table-sm table-bordered"
+                                                style="border: 2px solid #fff !important;">
+                                                <thead>
+                                                    <tr>
+                                                        <th class="text-left">Action</th>
+                                                        <th class="text-left">S.No</th>
+                                                        <th class="text-left">Original Name </th>
+                                                        <th class="text-left">Download</th>
+                                                    </tr>
+                                                </thead>
+                                                <tbody>
+                                                    <tr class="text-center" *ngFor="let data of contactList let i = index;"
+                                                        style="white-space: nowrap;">
+                                                        <td class="text-left">
+                                                            <button type="button" [disabled]="data.Process == 1"
+                                                                (click)="processFileCon(data)" mat-raised-button
+                                                                color="primary">Process</button>
+                                                            <button class=" bg-btn" (click)="deleteItemCon(data,i)">
+                                                                <mat-icon class="delete_icon ms-2">delete_forever</mat-icon>
+                                                            </button>
+                                                        </td>
+                                                        <td class="text-left">{{i + 1 }}</td>
+                                                        <td class="text-left">{{data.originalname }} </td>
+                                                        <td class="text-left">
+                                                            <a href="{{env.apiUrl}}/{{data.download}}" target="_blank">
+                                                                <i class="fa fa-file-excel-o excel" aria-hidden="true"
+                                                                    type="button"> </i>
+                                                            </a>
+                                                        </td>
+                                                    </tr>
+                                                </tbody>
+                                            </table>
+                                        </div>
+                                    </div>
+                                </div>
+                                <!--  list end -->
+                        </mat-tab>  
                     </mat-tab-group>
                 </div>
             </div>
