--- a/web1/src/app/common/common.component.css
+++ b/web1/src/app/common/common.component.css
@@ -43,6 +43,7 @@
 .navbar .nav-links a:hover{
   background-color: rgb(29, 12, 116);
   color: #eee;
+  cursor: pointer;
 }
 
 .drop-content a:hover{
@@ -53,13 +54,10 @@
  
 /* responsive navbar toggle button */
 .navbar #nav-check, .navbar .nav-btn{
- 
   display: none;
 }
 
 
-
- 
 /* Dropdown menu CSS code */
 .dropdown{
   position: relative;
@@ -79,6 +77,7 @@
 /* on hover show dropdown */
 .dropdown:hover .drop-content, .dropdown2:hover .drop-content2 {
   display: block;
+
 }
 /* drondown links */
 .drop-content a {
@@ -175,4 +174,5 @@
     color: rgb(9, 14, 90);
   }  
  
+
 }
