--- a/server/assest/invoice.css
+++ b/server/assest/invoice.css
@@ -115,7 +115,7 @@ table  {
 }
 
 .billTotalRow .col1 {
-    max-width:60%; float: left;
+    max-width:60%; float: left;padding-right: 5%;
 }
 
 .billTotalRow .col2 {
