--- a/web1/src/app/report/inventory-report/inventory-report.component.html
+++ b/web1/src/app/report/inventory-report/inventory-report.component.html
@@ -397,7 +397,7 @@
               <!-- opening/closing stock (QTY) -->
               <mat-tab *ngIf="viewInventoryReport" label="Opening/closing stock (QTY)">
                 <div class="body">
-                  <form class="p-3 pb-0" #f1="ngForm">
+                  <form class="p-3 pb-0" #f1="ngForm" (ngSubmit)="getCountInventoryReport()">
                     <div class="row" >
                       <div class="col-xl-2 col-lg-2 col-md-4 col-6 mb-0 ">
                         <mat-form-field class="example-full-width mb-0">
@@ -448,12 +448,9 @@
                             <th>Date</th>
                             <th>OpeningStock</th>
                             <th>AddPurchase </th>
-                            <th>AddPreOrderPurchase</th>
                             <th>DeletePurchase</th>
                             <th>AddSale</th>
                             <th>DeleteSale</th>
-                            <th>AddPreOrderSale</th>
-                            <th>DeletePreOrderSale</th>
                             <th>OtherDeleteStock</th>
                             <th>InitiateTransfer</th>
                             <th>CancelTransfer</th>
@@ -482,66 +479,25 @@
                             <td></td>
                             <td></td>
                             <td></td>
-                            <td></td>
-                            <td></td>
-                            <td></td>
                           </tr>
                         </thead>
                         <tbody class="text-center">
-                            <tr>
-                              <td>1</td>
-                              <td>20-04-2024</td>
-                              <td>200</td>
-                              <td>50</td>
-                              <td>10</td>
-                              <td>0</td>
-                              <td>20</td>
-                              <td>0</td>
-                              <td>10</td>
-                              <td>0</td>
-                              <td>0</td>
-                              <td>0</td>
-                              <td>0</td>
-                              <td>0</td>
-                              <td>230</td>
-                              <td>ABC optical</td>
+                            <tr *ngFor="let data of QtyStockList; let i = index" text="left">
+                              <td>{{ i + 1 }}</td>
+                              <td>{{data.DATE}}</td>
+                              <td>{{data.OpeningStock}}</td>
+                              <td>{{data.AddPurchase}}</td>
+                              <td>{{data.DeletePurchase}}</td>
+                              <td>{{data.AddSale}}</td>
+                              <td>{{data.DeleteSale}}</td>
+                              <td>{{data.OtherDeleteStock}}</td>
+                              <td>{{data.InitiateTransfer}}</td>
+                              <td>{{data.CancelTransfer}}</td>
+                              <td>{{data.AcceptTransfer}}</td>
+                              <td>{{data.ClosingStock}}</td>
+                              <td>{{data.ShopID}}</td>
                             </tr>
-                            <tr>
-                              <td>2</td>
-                              <td>21-04-2024</td>
-                              <td>230</td>
-                              <td>0</td>
-                              <td>0</td>
-                              <td>0</td>
-                              <td>10</td>
-                              <td>1</td>
-                              <td>0</td>
-                              <td>0</td>
-                              <td>0</td>
-                              <td>0</td>
-                              <td>0</td>
-                              <td>0</td>
-                              <td>219</td>
-                              <td>ABC optical</td>
-                            </tr>
-                            <tr>
-                              <td>3</td>
-                              <td>22-04-2024</td>
-                              <td>219</td>
-                              <td>10</td>
-                              <td>0</td>
-                              <td>5</td>
-                              <td>0</td>
-                              <td>0</td>
-                              <td>0</td>
-                              <td>0</td>
-                              <td>0</td>
-                              <td>0</td>
-                              <td>0</td>
-                              <td>0</td>
-                              <td>224</td>
-                              <td>ABC optical</td>
-                            </tr>
+                           
                         </tbody>
                       </table>
                     </div>
@@ -551,7 +507,7 @@
               <!-- opening/closing stock (AMT) -->
               <mat-tab *ngIf="viewInventoryReport" label="Opening/closing stock (AMT)">
                 <div class="body">
-                  <form class="p-3 pb-0" #f1="ngForm">
+                  <form class="p-3 pb-0" #f1="ngForm" (ngSubmit)="getAmountInventoryReport()">
                     <div class="row" >
                       <div class="col-xl-2 col-lg-2 col-md-4 col-6 mb-0 ">
                         <mat-form-field class="example-full-width mb-0">
@@ -593,21 +549,18 @@
                   </form>
                   <!-- list -->
                   <div class="body p-2">
-                    <div id="ProductSummary-content" class="col-sm-12" style="overflow: auto; height: 450px;">
+                    <div id="AmtStockExcel-content" class="col-sm-12" style="overflow: auto; height: 450px;">
                       <table class="table table-striped table-hover table-sm table-bordered"
-                        style="border: 2px solid #fff !important;" id="ProductSummaryExcel">
+                        style="border: 2px solid #fff !important;" id="AmtStockExcel">
                         <thead>
                           <tr style="white-space: nowrap;">
                             <th>S.No</th>
                             <th>Date</th>
                             <th>AmtOpeningStock</th>
                             <th>AmtAddPurchase </th>
-                            <th>AmtAddPreOrderPurchase</th>
                             <th>AmtDeletePurchase</th>
                             <th>AmtAddSale</th>
                             <th>AmtDeleteSale</th>
-                            <th>AmtAddPreOrderSale</th>
-                            <th>AmtDeletePreOrderSale</th>
                             <th>AmtOtherDeleteStock</th>
                             <th>AmtInitiateTransfer</th>
                             <th>AmtCancelTransfer</th>
@@ -617,10 +570,10 @@
                           </tr>
                           <tr class="totolRow">
                             <td>
-                              <i class="fa fa-file-excel-o excel" title="ExportAsXLSX" aria-hidden="true" type="button">
+                              <i class="fa fa-file-excel-o excel" title="ExportAsXLSX" (click)="exportAsXLSXAmtStock()" aria-hidden="true" type="button">
                               </i>
                               <button class="bg_none ms-4"  >
-                                <i class="far fa-file-pdf "
+                                <i class="far fa-file-pdf " (click)="print('AmtStockExcel-content')"
                                     style="color: #1a1e90;font-size: 22px;cursor: pointer;"> </i>
                             </button>
                             </td>
@@ -636,13 +589,24 @@
                             <td></td>
                             <td></td>
                             <td></td>
-                            <td></td>
-                            <td></td>
-                            <td></td>
                           </tr>
                         </thead>
                         <tbody class="text-center">
-
+                          <tr *ngFor="let Amt of AmtStockList; let i = index" text="left">
+                            <td>{{ i + 1 }}</td>
+                            <td>{{Amt.DATE}}</td>
+                            <td>{{Amt.AmtOpeningStock}}</td>
+                            <td>{{Amt.AmtAddPurchase}}</td>
+                            <td>{{Amt.AmtDeletePurchase}}</td>
+                            <td>{{Amt.AmtAddSale}}</td>
+                            <td>{{Amt.AmtDeleteSale}}</td>
+                            <td>{{Amt.AmtOtherDeleteStock}}</td>
+                            <td>{{Amt.AmtInitiateTransfer}}</td>
+                            <td>{{Amt.AmtCancelTransfer}}</td>
+                            <td>{{Amt.AmtAcceptTransfer}}</td>
+                            <td>{{Amt.AmtClosingStock}}</td>
+                            <td>{{Amt.ShopID}}</td>
+                          </tr>
                         </tbody>
                       </table>
                     </div>
