--- a/web1/src/app/common/common.component.html
+++ b/web1/src/app/common/common.component.html
@@ -163,7 +163,9 @@
               <a *ngIf="viewFlag.viewReminderReport" href="javascript:void(0)" (click)="ComingSoon()"  id="collapseExample7">Reminder </a>
               <!-- <a *ngIf="viewFlag.viewInventoryReport" href="javascript:void(0)" [routerLink]="['/report/inventory']" id="collapseExample7">Sale Profit </a> -->
               <a *ngIf="viewFlag.viewSalePaymentReport" href="javascript:void(0)" (click)="ComingSoon()"  id="collapseExample7">Sale Payment </a>
-              <a *ngIf="viewFlag.viewCustomerReport" href="javascript:void(0)"  [routerLink]="['/report/customer']" id="collapseExample7">Customer </a>
+
+              <a *ngIf="user?.UserGroup == 'SuperAdmin' || user?.UserGroup == 'CompanyAdmin'" href="javascript:void(0)"  [routerLink]="['/report/customer']" id="collapseExample7">Customer </a>
+
               <a *ngIf="viewFlag.viewLedgerReport" href="javascript:void(0)"  (click)="ComingSoon()"  id="collapseExample7">Ledger </a>
               <a *ngIf="viewFlag.viewProductTransferReport" href="javascript:void(0)" [routerLink]="['/report/product-transfer']" id="collapseExample7">Product Transfer</a>
               <a *ngIf="viewFlag.viewProductReturnReport" href="javascript:void(0)" [routerLink]="['/report/product-return']" id="collapseExample7">Product Return</a>
