--- a/web1/src/app/sale/bill/bill.component.html
+++ b/web1/src/app/sale/bill/bill.component.html
@@ -1217,7 +1217,15 @@
 <!-- payment -->
 <ng-template #content1 role="document" let-modal>
     <div class="modal-header" style="height: 50px; border-bottom: #ff651e 3px solid;">
-        <h3 class="modal-title header pt-2" id="exampleModalLabel" style="font-weight: bolder;">Payment</h3>
+        <div class="row" style="width:100%">
+            <div class="col-4">
+                <h3 class="modal-title header pt-2" id="exampleModalLabel" style="font-weight: bolder;">Payment</h3>
+            </div>
+            <div class="col-md-4 col-6 ms-auto text-right" >
+                <h3 class="modal-title header pt-2 pe-2" id="exampleModalLabel" style="font-weight: bolder;text-align:right">Old Balance {{this.OldInvoiceDueAmount}}</h3>
+            </div>
+        </div>
+        
         <button type="button" class="btn-close" aria-hidden="true" (click)="modal.dismiss('Cross click')"></button>
     </div>
     <div class="modal-body">
@@ -1333,8 +1341,9 @@
             </div>
         </form>
         <div class="row mt-3">
-            <div class="col-lg-5 col-md-5 col-12">
-                <div class="table-responsive " style="border: 1px solid #ff5100;overflow-x: scroll; max-height: 200px;">
+            <div class="col-lg-6 col-md-6 col-12">
+               
+                <!-- <div class="table-responsive " style="border: 1px solid #ff5100;overflow-x: scroll; max-height: 200px;">
                     <table class="table table-striped table-hover table-sm table-bordered"
                         style="border: 2px solid #fff !important; margin: 0; overflow-y: scroll; max-height: 150px;">
                         <thead>
@@ -1358,9 +1367,99 @@
                             </tr>
                         </tbody>
                     </table>
+                </div> -->
+                <div class="modal-body p-0" style="border: 1px solid #FF5722; padding: 5px !important;">
+                    <form #f7="ngForm" >
+                        <div class="row">
+                            <!-- <div class="col-xl-1 col-lg-1 col-md-3 col-6 mb-0">
+                                <mat-form-field class="example-full-width mb-0">
+                                    <mat-label style="color: rgb(255 0 0) !important;letter-spacing: 1px; font-weight: 800;">Balance</mat-label>
+                                    <input class="redclass" type="number" min="0" style="color: rgb(255 0 0 / 75%) !important;"
+                                        matInput name="Total Amount" value="{{ this.applyReward.PayableAmount}}" disabled
+                                        #TOutstandingcontrol [autocomplete]="false">
+                                </mat-form-field>
+                            </div> -->
+                            <div class="col-xl-4 col-lg-4 col-md-6 col-6 mb-0" >
+                            <mat-form-field class="example-full-width mb-0">
+                                <mat-label>Reward Type</mat-label>
+                                <mat-select name="RewardType" [(ngModel)]="applyReward.RewardType"  (selectionChange)="RewardType()" required #RewardTypecontrol1 >
+                                    <mat-option value="Self">Self</mat-option>
+                                    <mat-option value="referral">Referral </mat-option>
+                                </mat-select>
+                            </mat-form-field>
+                        </div>
+            
+                        <div *ngIf="applyReward.RewardType == 'referral'" class="col-xl-4 col-lg-4 col-md-6 col-6 mb-0">
+                        <mat-form-field class="example-full-width">
+                            <mat-label>Referral Name</mat-label>
+                            <input type="text" placeholder="serach customer" aria-label="Text" matInput
+                            name="PayeeID"  [formControl]="myControl1" [matAutocomplete]="auto1"
+                                   (input)="customerSearch(myControl1.value, 'Name', 'mob',applyReward.RewardCustomerRefID)" required>
+                            <mat-autocomplete autoActiveFirstOption #auto1="matAutocomplete" >
+                              <mat-option (click)="CustomerSelection('All','0')" value=''></mat-option>
+                              <mat-option style="border-bottom: 2px solid #000 !important;" class="customer-option" (click)="CustomerSelection('data',option.ID)" *ngFor="let option of filteredOptions" [value]="option.Name">
+                                <table style="width:100%">
+                                    <thead>
+                                        <tr>
+                                            <td>{{option.Name | uppercase}}</td>
+                                            <td style="text-align: right;"> {{option.MobileNo1}}</td>
+                                        </tr>
+                                    </thead>
+                                </table>
+                              </mat-option>
+                            </mat-autocomplete>
+                          </mat-form-field>
+                        </div>
+            
+                            <div class="col-xl-4 col-lg-4 col-md-6 col-6 mb-0">
+                                <mat-form-field class="example-full-width mb-0">
+                                    <mat-label>RewardBalance</mat-label>
+                                    <input type="number" min="0" style="font-size: 17px !important;" matInput name="RewardBalance"
+                                        [(ngModel)]="applyReward.RewardBalance" [autocomplete]="false">
+                                </mat-form-field>
+                            </div>
+                           
+                            <div class="col-xl-4 col-lg-4 col-md-6 col-6 mb-0">
+                                <mat-form-field class="example-full-width mb-0">
+                                    <mat-label>AppliedRewardAmount</mat-label>
+                                    <input type="number" min="0" style="font-size: 17px !important;" matInput name="AppliedRewardAmount"
+                                        [(ngModel)]="applyReward.AppliedRewardAmount" [autocomplete]="false">
+                                </mat-form-field>
+                            </div>
+                           
+                            <div class="col-xl-4 col-lg-4 col-md-6 col-6 mb-0">
+                                <mat-form-field class="example-full-width mb-0">
+                                    <mat-label>New Payment</mat-label>
+                                    <input type="number" min="0" style="font-size: 17px !important;" matInput name="PaymentAmount"
+                                        [(ngModel)]="applyReward.PaidAmount" [autocomplete]="false">
+                                </mat-form-field>
+                            </div>
+            
+                            <div  class="col-xl-2 col-lg-4 col-md-6 col-4 p-0">
+                                <button  [disabled]="f7.invalid || otpChecked === true || applyReward.PaidAmount === 0"
+                                    mat-raised-button color="primary" (click)="sendOtpForAppliedReward()">Send Otp</button>    
+                            </div>
+            
+                            <div *ngIf="otpChecked === true" class="col-xl-2 col-lg-4 col-md-6 col-6 mb-0">
+                                <mat-form-field class="example-full-width mb-0">
+                                    <mat-label>Enter OTP</mat-label>
+                                    <input type="text"  style="font-size: 17px !important;" matInput name="Otp"
+                                        [(ngModel)]="applyReward.Otp" [autocomplete]="false">
+                                </mat-form-field>
+                            </div>
+            
+                            <div class="col-xl-3 col-lg-4 col-md-6 col-4" >
+                                <button (click)="onRewardSubmit()" [disabled]="f7.invalid || otpChecked === false || applyReward.Otp === null"
+                                    mat-raised-button color="primary">Apply Reward</button>
+                            </div>
+                            
+                          
+                        </div>
+                    </form>
+                   
                 </div>
             </div>
-            <div class="col-lg-6 col-md-7 col-12 mt-5 mt-md-0 ms-auto">
+            <div class="col-lg-6 col-md-6 col-12 mt-5 mt-md-0 ms-auto">
                 <div class="table-responsive " style="border: 1px solid #ff5100;overflow-x: scroll; max-height: 200px;">
                     <table class="table table-striped table-hover table-sm table-bordered"
                         style="border: 2px solid #fff !important; margin: 0; ">
